# Aptadynamic-vpa

./: .gitignore  ANOMALIES.md  G2_IMPLEMENTATION_AUDIT.md  G2_RESULT_H5.md  O_D Observation Contract.md  PREREGISTRATION_G1.md  README.md  constraints-g2.txt  pyproject.toml
.github/workflows/: tests.yml
evidence/BPA/: 2026-07-11T08-52-49Z.csv
evidence/NYISO/: 2026-07-11T08-52-49Z.csv
results/: g2_boundary_audit_post_h5.json  g2_confirmatory_H4.csv  g2_confirmatory_H4.json  g2_confirmatory_H4_gates.json
scripts/: audit_g2_boundary.py  baseline_test.py  latent_test.py  permtest.py  reproduce_bpa.py  run_g2_confirmatory.py  run_pipeline.py  sweep.py
src/aptadynamic_eg/: __init__.py  drivers.py  evaluation.py  g2.py  h4.py  omega.py  projection.py
src/aptadynamic_eg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/aptadynamic_eg/ingest/: __init__.py  memory_analysis_bpa.py
src/aptadynamic_eg/validation/: explore_bpa_dataset.py  stationarity_test_bpa.py
src/aptadynamic_vpa/: __init__.py  omega.py  projection.py
src/aptadynamic_vpa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/aptadynamic_vpa/ingest/: __init__.py  convert_bpa_to_csv.py
src/aptadynamic_vpa/validation/: __init__.py
tests/: test_causal_reproduction.py  test_g2_h2.py  test_g2_h4.py  test_post_audit_reforms.py
