[project]
name = "aptadynamic-vpa"
version = "0.1.0"
description = "Aptadynamic VPA: PRAMA projection over BPA outage observables"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "numpy>=1.24"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
